[db] Initalize db layer
